// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comphub - Salary Bar Trend Component should display minus sign when percentage change is negative 1`] = `
<pf-salary-trend-chart
  Highcharts={[Function Object]}
  __ngContext__={[Function LRootView]}
  absoluteValueOfPercentageChange={[Function Number]}
  categories={[Function Array]}
  chartOptions={[Function Object]}
  currencyPipe={[Function Object]}
  data={[Function Array]}
  datePipe={[Function Object]}
  isHourly="false"
  localSalaryTrendData={[Function Object]}
  salaryTrendData={[Function Object]}
  sanitizer={[Function DomSanitizerImpl]}
>
  <div
    data-qa-id="cht-salary-trend"
  >
    <div
      class="percentage-change"
      data-qa-id="cnt-percentageChange"
    >
      <span
        class="text-danger"
      >
         - 
      </span>
       1.77% 
    </div>
    <highcharts-chart
      class="salary-chart"
    />
    <img
      class="export-chart"
      src=""
    />
  </div>
</pf-salary-trend-chart>
`;

exports[`Comphub - Salary Bar Trend Component should display plus sign when percentage change is positive 1`] = `
<pf-salary-trend-chart
  Highcharts={[Function Object]}
  __ngContext__={[Function LRootView]}
  absoluteValueOfPercentageChange={[Function Number]}
  categories={[Function Array]}
  chartOptions={[Function Object]}
  currencyPipe={[Function Object]}
  data={[Function Array]}
  datePipe={[Function Object]}
  isHourly="false"
  localSalaryTrendData={[Function Object]}
  salaryTrendData={[Function Object]}
  sanitizer={[Function DomSanitizerImpl]}
>
  <div
    data-qa-id="cht-salary-trend"
  >
    <div
      class="percentage-change"
      data-qa-id="cnt-percentageChange"
    >
      <span
        class="plus-sign"
      >
         + 
      </span>
       1.80% 
    </div>
    <highcharts-chart
      class="salary-chart"
    />
    <img
      class="export-chart"
      src=""
    />
  </div>
</pf-salary-trend-chart>
`;

exports[`Comphub - Salary Bar Trend Component should not display plus or minus sign when percentage change is 0 1`] = `
<pf-salary-trend-chart
  Highcharts={[Function Object]}
  __ngContext__={[Function LRootView]}
  absoluteValueOfPercentageChange="0"
  categories={[Function Array]}
  chartOptions={[Function Object]}
  currencyPipe={[Function Object]}
  data={[Function Array]}
  datePipe={[Function Object]}
  isHourly="false"
  localSalaryTrendData={[Function Object]}
  salaryTrendData={[Function Object]}
  sanitizer={[Function DomSanitizerImpl]}
>
  <div
    data-qa-id="cht-salary-trend"
  >
    <div
      class="percentage-change"
      data-qa-id="cnt-percentageChange"
    >
       0.00% 
    </div>
    <highcharts-chart
      class="salary-chart"
    />
    <img
      class="export-chart"
      src=""
    />
  </div>
</pf-salary-trend-chart>
`;
